# LLM_Engineering_Practice

./: README.md  pyproject.toml
Assignments/Week1/: day1_Soln.ipynb  day2_soln.ipynb
Assignments/Week2/: Day1_Solution.ipynb
Week 3/: Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb
Week1/: Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  scraper.py  week1 EXERCISE.ipynb
Week2/: Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  booking.db  prices.db
Week4/: Day1.ipynb  Day2.ipynb
