[project]
name = "llm-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.6",
    "ipython>=9.8.0",
    "langchain-openai>=1.1.4",
    "litellm>=1.80.10",
]
