[project]
name = "llm-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "bs4>=0.0.2",
    "google-generativeai>=0.8.6",
    "gradio>=6.1.0",
    "ipython>=9.8.0",
    "langchain-openai>=1.1.4",
    "litellm>=1.80.10",
    "networkx>=3.6.1",
    "visualizer>=0.0.10",
]
